deploy: f49ae6a5e07d9bbfea91a12a668c6f3db1f2dd32

--- a/theindex.html
+++ b/theindex.html
@@ -56,12 +56,10 @@ function main() {
     }
   }
 }
-
-window.addEventListener('DOMContentLoaded', main);
 </script>
 
 </head>
-<body>
+<body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
     <h1 class="title">Index</h1>
@@ -95,7 +93,7 @@ window.addEventListener('DOMContentLoaded', main);
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-06-03 17:55:21 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-06-03 19:08:12 UTC</small>
       </div>
     </div>
   </div>
