--- a/index.html
+++ b/index.html
@@ -178,6 +178,22 @@ window.addEventListener('DOMContentLoaded', main);
 
   </ul>
 </li>
+<li>
+  <a class="reference reference-toplevel" href="#17" id="67">Macros</a>
+  <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">mrows
+      <li><a class="reference" href="#mrows.m%2CForLoopStmt"
+    title="mrows(x: ForLoopStmt)">mrows(x: ForLoopStmt)</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">rows
+      <li><a class="reference" href="#rows.m%2CForLoopStmt"
+    title="rows(x: ForLoopStmt)">rows(x: ForLoopStmt)</a></li>
+
+  </ul>
+
+  </ul>
+</li>
 
 </ul>
 
@@ -641,6 +657,70 @@ Iterates over <tt class="docutils literal"><span class="pre"><span class="Identi
 </div>
 
 </dl></div>
+<div class="section" id="17">
+<h1><a class="toc-backref" href="#17">Macros</a></h1>
+<dl class="item">
+
+<div id="mrows-macros-all">
+<div id="mrows.m,ForLoopStmt">
+<dt><pre><span class="Keyword">macro</span> <a href="#mrows.m%2CForLoopStmt"><span class="Identifier">mrows</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">ForLoopStmt</span><span class="Other">)</span></pre></dt>
+<dd>
+
+This for loop macro, iterates over <tt class="docutils literal"><span class="pre"><span class="Identifier">UncheckedArray</span><span class="Punctuation">[</span><span class="Identifier">untyped</span><span class="Punctuation">]</span></span></tt> or <tt class="docutils literal"><span class="pre"><span class="Keyword">ptr</span> <span class="Identifier">untyped</span></span></tt> array arguments, with a length. It &quot;yields&quot; <tt class="docutils literal"><span class="pre"><span class="Punctuation">(</span><span class="Identifier">index</span><span class="Punctuation">,</span> <span class="Identifier">src1</span><span class="Punctuation">[</span><span class="Identifier">index</span><span class="Punctuation">]</span><span class="Punctuation">,</span> <span class="Identifier">src2</span><span class="Punctuation">[</span><span class="Identifier">index</span><span class="Punctuation">]</span><span class="Punctuation">,</span> <span class="Operator">...</span><span class="Punctuation">)</span></span></tt> where the indexed values are mutable.
+<p><strong class="examples_text">Example:</strong></p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">std</span> <span class="Operator">/</span> <span class="Identifier">sugar</span>
+<span class="Keyword">var</span> 
+  <span class="Identifier">l</span> <span class="Operator">=</span> <span class="DecNumber">3</span>
+  <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Punctuation">[</span><span class="DecNumber">100</span><span class="Punctuation">,</span> <span class="DecNumber">300</span><span class="Punctuation">,</span> <span class="DecNumber">500</span><span class="Punctuation">]</span>
+  <span class="Identifier">b</span> <span class="Operator">=</span> <span class="Punctuation">[</span><span class="CharLit">'a'</span><span class="Punctuation">,</span> <span class="CharLit">'e'</span><span class="Punctuation">,</span> <span class="CharLit">'i'</span><span class="Punctuation">]</span>
+  <span class="Identifier">c</span> <span class="Operator">=</span> <span class="Punctuation">[</span><span class="FloatNumber">1.1</span><span class="Punctuation">,</span> <span class="FloatNumber">2.2</span><span class="Punctuation">,</span> <span class="FloatNumber">3.3</span><span class="Punctuation">]</span>
+  <span class="Identifier">pa</span> <span class="Operator">=</span> <span class="Identifier">a</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Keyword">addr</span>
+  <span class="Identifier">pb</span> <span class="Operator">=</span> <span class="Identifier">b</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Keyword">addr</span>
+  <span class="Identifier">pc</span> <span class="Operator">=</span> <span class="Keyword">cast</span><span class="Punctuation">[</span><span class="Keyword">ptr</span> <span class="Identifier">UncheckedArray</span><span class="Punctuation">[</span><span class="Identifier">float</span><span class="Punctuation">]</span><span class="Punctuation">]</span><span class="Punctuation">(</span><span class="Identifier">c</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Keyword">addr</span><span class="Punctuation">)</span>
+
+<span class="Keyword">var</span> <span class="Identifier">tuples</span><span class="Punctuation">:</span><span class="Identifier">seq</span><span class="Punctuation">[</span><span class="Punctuation">(</span><span class="Identifier">int</span><span class="Punctuation">,</span> <span class="Identifier">int</span><span class="Punctuation">,</span> <span class="Identifier">char</span><span class="Punctuation">,</span> <span class="Identifier">float</span><span class="Punctuation">)</span><span class="Punctuation">]</span>
+<span class="Keyword">for</span> <span class="Identifier">i</span><span class="Punctuation">,</span> <span class="Identifier">ta</span><span class="Punctuation">,</span> <span class="Identifier">tb</span><span class="Punctuation">,</span> <span class="Identifier">tc</span> <span class="Keyword">in</span> <span class="Identifier">mrows</span><span class="Punctuation">(</span><span class="Identifier">pa</span><span class="Punctuation">,</span> <span class="Identifier">pb</span><span class="Punctuation">,</span> <span class="Identifier">pc</span><span class="Punctuation">[</span><span class="Punctuation">]</span><span class="Punctuation">,</span> <span class="Identifier">l</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+  <span class="Identifier">inc</span> <span class="Identifier">ta</span>
+  <span class="Identifier">tuples</span><span class="Operator">.</span><span class="Identifier">add</span> <span class="Punctuation">(</span><span class="Identifier">i</span><span class="Punctuation">,</span> <span class="Identifier">ta</span><span class="Punctuation">,</span> <span class="Identifier">tb</span><span class="Punctuation">,</span> <span class="Identifier">tc</span><span class="Punctuation">)</span>
+
+<span class="Identifier">doAssert</span><span class="Punctuation">(</span><span class="Identifier">tuples</span><span class="Punctuation">[</span><span class="Operator">^</span><span class="DecNumber">1</span><span class="Punctuation">]</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span> <span class="Operator">==</span> <span class="Identifier">l</span><span class="Operator">-</span><span class="DecNumber">1</span><span class="Punctuation">)</span>
+<span class="Identifier">doAssert</span><span class="Punctuation">(</span><span class="Identifier">tuples</span><span class="Punctuation">[</span><span class="Operator">^</span><span class="DecNumber">1</span><span class="Punctuation">]</span><span class="Punctuation">[</span><span class="DecNumber">3</span><span class="Punctuation">]</span> <span class="Operator">==</span> <span class="FloatNumber">3.3</span><span class="Punctuation">)</span>
+<span class="Identifier">doAssert</span><span class="Punctuation">(</span><span class="Identifier">tuples</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">]</span> <span class="Operator">==</span> <span class="DecNumber">101</span><span class="Punctuation">)</span></pre>
+
+</dd>
+</div>
+
+</div>
+
+<div id="rows-macros-all">
+<div id="rows.m,ForLoopStmt">
+<dt><pre><span class="Keyword">macro</span> <a href="#rows.m%2CForLoopStmt"><span class="Identifier">rows</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">ForLoopStmt</span><span class="Other">)</span></pre></dt>
+<dd>
+
+This for loop macro, iterates over <tt class="docutils literal"><span class="pre"><span class="Identifier">UncheckedArray</span><span class="Punctuation">[</span><span class="Identifier">untyped</span><span class="Punctuation">]</span></span></tt> or <tt class="docutils literal"><span class="pre"><span class="Keyword">ptr</span> <span class="Identifier">untyped</span></span></tt> array arguments, with a length. It &quot;yields&quot; <tt class="docutils literal"><span class="pre"><span class="Punctuation">(</span><span class="Identifier">index</span><span class="Punctuation">,</span> <span class="Identifier">src1</span><span class="Punctuation">[</span><span class="Identifier">index</span><span class="Punctuation">]</span><span class="Punctuation">,</span> <span class="Identifier">src2</span><span class="Punctuation">[</span><span class="Identifier">index</span><span class="Punctuation">]</span><span class="Punctuation">,</span> <span class="Operator">...</span><span class="Punctuation">)</span></span></tt>. 
+<p><strong class="examples_text">Example:</strong></p>
+<pre class="listing"><span class="Keyword">var</span> 
+  <span class="Identifier">l</span> <span class="Operator">=</span> <span class="DecNumber">3</span>
+  <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Punctuation">[</span><span class="DecNumber">100</span><span class="Punctuation">,</span> <span class="DecNumber">300</span><span class="Punctuation">,</span> <span class="DecNumber">500</span><span class="Punctuation">]</span>
+  <span class="Identifier">b</span> <span class="Operator">=</span> <span class="Punctuation">[</span><span class="CharLit">'a'</span><span class="Punctuation">,</span> <span class="CharLit">'e'</span><span class="Punctuation">,</span> <span class="CharLit">'i'</span><span class="Punctuation">]</span>
+  <span class="Identifier">c</span> <span class="Operator">=</span> <span class="Punctuation">[</span><span class="FloatNumber">1.1</span><span class="Punctuation">,</span> <span class="FloatNumber">2.2</span><span class="Punctuation">,</span> <span class="FloatNumber">3.3</span><span class="Punctuation">]</span>
+  <span class="Identifier">pa</span> <span class="Operator">=</span> <span class="Identifier">a</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Keyword">addr</span>
+  <span class="Identifier">pb</span> <span class="Operator">=</span> <span class="Identifier">b</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Keyword">addr</span>
+  <span class="Identifier">pc</span> <span class="Operator">=</span> <span class="Keyword">cast</span><span class="Punctuation">[</span><span class="Keyword">ptr</span> <span class="Identifier">UncheckedArray</span><span class="Punctuation">[</span><span class="Identifier">float</span><span class="Punctuation">]</span><span class="Punctuation">]</span><span class="Punctuation">(</span><span class="Identifier">c</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Operator">.</span><span class="Keyword">addr</span><span class="Punctuation">)</span>
+
+<span class="Keyword">var</span> <span class="Identifier">tuples</span><span class="Punctuation">:</span><span class="Identifier">seq</span><span class="Punctuation">[</span><span class="Punctuation">(</span><span class="Identifier">int</span><span class="Punctuation">,</span> <span class="Identifier">int</span><span class="Punctuation">,</span> <span class="Identifier">char</span><span class="Punctuation">,</span> <span class="Identifier">float</span><span class="Punctuation">)</span><span class="Punctuation">]</span>
+<span class="Keyword">for</span> <span class="Identifier">i</span><span class="Punctuation">,</span> <span class="Identifier">ta</span><span class="Punctuation">,</span> <span class="Identifier">tb</span><span class="Punctuation">,</span> <span class="Identifier">tc</span> <span class="Keyword">in</span> <span class="Identifier">rows</span><span class="Punctuation">(</span><span class="Identifier">pa</span><span class="Punctuation">,</span> <span class="Identifier">pb</span><span class="Punctuation">,</span> <span class="Identifier">pc</span><span class="Punctuation">[</span><span class="Punctuation">]</span><span class="Punctuation">,</span> <span class="Identifier">l</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+  <span class="Identifier">tuples</span><span class="Operator">.</span><span class="Identifier">add</span> <span class="Punctuation">(</span><span class="Identifier">i</span><span class="Punctuation">,</span> <span class="Identifier">ta</span><span class="Punctuation">,</span> <span class="Identifier">tb</span><span class="Punctuation">,</span> <span class="Identifier">tc</span><span class="Punctuation">)</span>
+
+<span class="Identifier">doAssert</span><span class="Punctuation">(</span><span class="Identifier">tuples</span><span class="Punctuation">[</span><span class="Operator">^</span><span class="DecNumber">1</span><span class="Punctuation">]</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span> <span class="Operator">==</span> <span class="Identifier">l</span><span class="Operator">-</span><span class="DecNumber">1</span><span class="Punctuation">)</span>
+<span class="Identifier">doAssert</span><span class="Punctuation">(</span><span class="Identifier">tuples</span><span class="Punctuation">[</span><span class="Operator">^</span><span class="DecNumber">1</span><span class="Punctuation">]</span><span class="Punctuation">[</span><span class="DecNumber">3</span><span class="Punctuation">]</span> <span class="Operator">==</span> <span class="FloatNumber">3.3</span><span class="Punctuation">)</span></pre>
+
+</dd>
+</div>
+
+</div>
+
+</dl></div>
 
   </div>
 </div>
@@ -649,7 +729,7 @@ Iterates over <tt class="docutils literal"><span class="pre"><span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-31 23:51:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-01 13:39:56 UTC</small>
       </div>
     </div>
   </div>
